# ftxui_template

./: .gitignore  CMakeLists.txt  README.md  dependencies.cmake
include/: event.h  logger.h  ui.h
include/pages/: page.h  page1.h  page2.h
src/: event.cpp  logger.cpp  main.cpp  ui.cpp
src/pages/: page1.cpp  page2.cpp
